# nlp-labs

./: lab-1.py  pyproject.toml
lab-1/: lab-2.ipynb  processed_reviews.csv
lab-2/: app.py  best_model.pkl  classification_metrics.csv  feedback.csv  lab2.ipynb  requirements.txt  vectorizer.pkl
lab-3/: git-doc.md  main.py  requirements.txt
